Shows cumulative GPA on load

--- a/partials/profile.html
+++ b/partials/profile.html
@@ -33,7 +33,7 @@
 							<button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)">
 								<span class="glyphicon glyphicon-trash"></span>
 							</button>
-						</div>cd ..
+						</div>
 					</li>
 				</ul>
 			</div >	
