--- a/partials/WhatDoINeed.html
+++ b/partials/WhatDoINeed.html
@@ -6,9 +6,7 @@
             <h4>Choose a class</h4>
             <h4>{{finalGradeShow}}</h4>
 
-            <div>Grading Style: <select ng-model="selectedGradeStyle" ng-options="style for style in styles"  ng-change="gradeStyleChosen = true" ></select></div>
-
-            <div ng-show="gradeStyleChosen">Course: <select ng-model="selectedCourseINeed" ng-options="course.name for course in courses" ng-change="getCourseDetails()"><br></select></div>
+            <div>Course: <select ng-model="selectedCourseINeed" ng-options="course.name for course in courses" ng-change="getCourseDetails()"><br></select></div>
 
 
             <div class="alert alert-danger" ng-show="noUngradedAssignments">
