Removed unecesary code

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -10,7 +10,7 @@
 
     </div>
     <ul class="nav navbar-nav">
-        <li class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
+        <li id="navbar-profile-btn" class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
         <li><a >Quick Grade</a></li>
 
           <li class="dropdown" uib-dropdown>
