--- a/partials/profile.html
+++ b/partials/profile.html
@@ -29,9 +29,9 @@
 					<li class=" course-row row">
 						<a class="course-name col-sm-9" href="#!/courses/{{course.id}}" ng-click="x(course.id)">{{course.name}}<br><i class="course-desc col-sm-12"><small>{{course.desc}}</small></i></a>
 						<div class="col-sm-3" id="delete-course-btns">
-							<button class="btn btn-default" ng-click="goToCourseSettings(course.id)">
+							<a class="btn btn-default" ng-click="goToCourseSettings(course.id)">
 								<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-							</button>
+							</a>
 							<button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)">
 								<span class="glyphicon glyphicon-trash"></span>
 							</button>
