Fixed what user sees in navbar when logged out

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,12 +11,11 @@
     </div>
     <ul class="nav navbar-nav">
         <li id="navbar-profile-btn" class="active" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
-        <li><a >Quick Grade</a></li>
 
-          <li class="dropdown" uib-dropdown>
-            <a  class="btn dropdown-toggle"  uib-dropdown-toggle>My Classes <b class="caret"></b></a>
+          <li class="dropdown" ng-show="isLoggedIn" uib-dropdown>
+            <a class="btn dropdown-toggle" uib-dropdown-toggle>My Classes <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <div id="navbar-courses"  ng-repeat="course in navCourses" >
+                <div id="navbar-courses" ng-repeat="course in navCourses" >
                     <li><a ng-href="#!/courses/{{course.id}}">{{course.name}}</a></li>
                 </div>
             </ul>
