--- a/css/styles.css
+++ b/css/styles.css
@@ -194,7 +194,9 @@
 }
 
 #add-course-btn{
-	margin-top: 2.5%;
+	margin: 0;
+	padding: 0;
+	margin-top: 3%;
 }
 
 
@@ -209,6 +211,7 @@
 /*	margin: 10px 2.5%;*/
 	text-align: left;
 	color: #020202;
+	margin-left: 10px;
 }
 
 /**********/
@@ -297,6 +300,9 @@
 	border: 2px solid black;
 }
 
+.course-grade{
+	margin-top: 10px;
+}
 
 a{
 	color: #020202;
