--- a/partials/profile.html
+++ b/partials/profile.html
@@ -22,16 +22,15 @@
 			<div class="col-sm-7 col-md-7 col-lg-4 bg-info clearfix" id="course-list-container">
 				<div class="row">
 					<h3 id="course-header" class="col-sm-10">{{semester.selectedSemester}}</h3>
-					<div id="add-course-btn" class="col-sm-2"><span class="btn btn-default glyphicon glyphicon-pencil" aria-hidden="true" ng-click="openNewCourseModal()"></span></div>
+					<div id="add-course-btn" class="col-sm-1"><span class="btn btn-default glyphicon glyphicon-pencil" aria-hidden="true" ng-click="openNewCourseModal()"></span></div>
 				</div>
 				<hr>
 				<ul ng-repeat="course in courses | filter: semester.filter" id="course-list">
 					<li class=" course-row row">
-						<a class="course-name col-sm-9" href="#!/courses/{{course.id}}" ng-click="x(course.id)"><span class="real-course-name">{{course.name}}</span><br><i class="course-desc col-sm-12"><small><span class="real-course-desc">{{course.desc}}</span></small></i></a>
+						<a class="course-name col-sm-6" href="#!/courses/{{course.id}}" ng-click="x(course.id)"><span class="real-course-name">{{course.name}}</span><br><i class="course-desc col-sm-12"><small><span class="real-course-desc">{{course.desc}}</span></small></i></a>
+						<div class="col-sm-3 course-grade"><strong>{{course.finalWeighted.toFixed(0)}}%</strong></div>
 						<div class="col-sm-3" id="delete-course-btns">
-							<a class="btn btn-default" ng-click="goToCourseSettings(course.id)">
-								<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-							</a>
+							<a class="btn btn-default" ng-click="goToCourseSettings(course.id)"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
 							<button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)">
 								<span class="glyphicon glyphicon-trash"></span>
 							</button>
