Fixed change grade and styled pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
 .red{
 	color: black;
 	background-color: lightyellow;
-	padding: 1% 0;
+	/*padding: 1% 0%;*/
 }
 
 .disabled{
@@ -99,11 +99,12 @@
 	padding: 0px;
 	margin: 0px;
 	line-height: 2em;
-	padding: 2% 2% 5% 2%;
+	padding: 0% 2% 5% 2%;
 	background-color: #89898A;
 	color: #020202;
 	font-size: 1.05em;
 	margin-left: 2%;
+	box-shadow: 5px 5px 5px grey;
 }
 #single-course-btns{
 	margin: 0px;
@@ -126,7 +127,7 @@
 
 
 #update-grade-container{
-
+	margin-top: 10px;
 	line-height: 2em;
 	margin-left: 2%;
 }
@@ -149,7 +150,7 @@
 #course-list-container{
 	border: 2px solid black;
 	padding: 0 1%;
-
+	box-shadow: 5px 5px 5px grey;
 	background-color: #89898A;
 	/*margin-right: 2%;*/
 	padding-bottom: 1%;
@@ -211,7 +212,7 @@
 	padding: 0px;
 	margin: 0px;
 	text-decoration: underline;
-	/*margin: 2.5%;*/
+	margin: 2%;
 	width: auto;
 }
 #course-header{
@@ -279,7 +280,9 @@
 	line-height: 1.5em;
 }
 
-
+#new-assignment{
+	margin-top: 18px;
+}
 
 .real-course-name{
 	color: black;
@@ -308,7 +311,7 @@
 }
 
 .course-grade{
-	margin-top: 10px;
+	margin-top: 0px;
 }
 
 #user-profile-pic{
@@ -328,4 +331,8 @@
 
 a{
 	color: #020202;
+}
+
+#settings-page{
+	text-align: center;
 }
