--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -7,21 +7,32 @@
 	<br>
 	<div class="col-sm-7 col-lg-6">
 	<div id="single-course-view-container" >
-		<h3>Assignments</h3>
+		<div class="row">
+			<h3 class="col-sm-11">Assignments</h3>
+			<div class="col-sm-1">
+				<button id="new-assignment" class="btn btn-default" ng-click="openNewAssignmentModal()">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+				</button>
+			</div>
+		</div>
 		<hr>
 		<ul ng-repeat="ass in assignments track by ass.id" id="assignment-list">
 			<div ng-class="{red: wasAssignmentClicked(ass)}" id="single-assignment-list-item">
 				<li ng-class="enteringGrade ? 'disabled' : 'enabled'" >
-					<div class="col-sm-8 col-lg-9">
-						<span class="col-sm-8 course-name">
-							<a href="#" data-toggle="tooltip" data-placement="top" title="balls" html="true" animation="true">{{ass.name}}</a>
+					<div class="col-sm-10 col-lg-10">
+						<span class="col-sm-7 course-name">
+							<span>{{ass.name}}</span>
 						</span>
-						<span class="col-sm-4 course-grade"><strong>{{ass.pointsEarned}}/{{ass.possiblePoints}}</strong></span>
+						<span class="col-sm-5 course-grade">
+							<strong>{{ass.pointsEarned}}/{{ass.possiblePoints}}</strong>
+							<small><i> ({{(ass.pointsEarned/ass.possiblePoints * 100).toFixed(0)}}%)</i></small>
+						</span>
 					</div>
-					<div class="col-sm-4 col-lg-3 single-course-delete-btns">
-						<button class="btn btn-sm btn-default" ng-click="showNewGradeField(ass)" ng-class="enteringGrade ? 'disabled' : ''" ng-model="clicked" class="">Change Grade</button>
-						<button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" 
-							ng-class="">Delete</button>
+					<div class="col-sm-2 col-lg-2 single-course-delete-btns">
+						<button class="btn btn-sm btn-default" ng-click="showNewGradeField(ass)" ng-class="enteringGrade ? 'disabled' : ''" ng-model="clicked" class="">
+							<span class="glyphicon glyphicon-edit"></span>
+						</button>
+						<button class="btn btn-sm btn-danger" ng-click="deleteAssignment(ass.id)" ng-class=""><span class="glyphicon glyphicon-trash"></span></button>
 					</div>
 				</li>
 				<br>
@@ -37,12 +48,10 @@
 		</div>
 		<div class="col-sm-3 col-lg-3"></div>
 	</div>
-	<!-- <br> -->
-	<!-- <br> -->
 
 	<div class="col-sm-12">
 		<div id="update-grade-container">
-			<input id="new-grade-btn" type="number" ng-model="updatedGrade" ng-show="enteringGrade" placeholder="New Grade For {{clickedAssignment.name}}">
+			<input id="new-grade-field" type="number" ng-model="updatedGrade" ng-show="enteringGrade" placeholder="{{clickedAssignment.name}}">
 			<button class="btn btn-sm btn-primary"  ng-show="enteringGrade" ng-click="updateGrade()">Submit</button>
 			<button ng-show="enteringGrade" ng-click="cancel()" class="btn btn-sm btn-danger"><span>Cancel</span></button>
 			<br>
@@ -52,8 +61,6 @@
 		</div>
 		<div id="single-course-btns">
 			<h2 >Final Grade: {{finalGrade}} </h2>
-			<br>
-			<button class="btn btn-primary" ng-click="openNewAssignmentModal()">New Assignment</button>
 		</div>
 	</div>
 </div>
