Styled and changed how ungraded assignments are shown

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -28,7 +28,7 @@
       <li><a ng-href="#" ng-show="!isLoggedIn" ng-click="openRegisterModal()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a ng-href="#" ng-show="!isLoggedIn" ng-click="openLoginModal()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       <li><a ng-href="#!/{{user}}/settings" ng-show="isLoggedIn"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-      <li><a ng-show="isLoggedIn" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      <li><a ng-href="#" ng-show="isLoggedIn" ng-click="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </ul>
   </div>
 </nav>
