--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,12 @@
 
 }
 
+#speech-bubble{
+	width: 200px;
+	height: 150px;
+	margin-top: -100px;
+	margin-left: -49px;
+}
 
 #x{
 	display: flex;
@@ -132,11 +138,11 @@
 	margin-left: 2%;
 }
 
-#single-course-header h1{
+#single-course-header {
 	text-align: center;
 	margin: 0px;
 	padding: 0px;
-	margin-bottom: 2%;
+	margin-bottom: 5%;
 }
 
 .single-course-delete-btns{
