--- a/partials/profile.html
+++ b/partials/profile.html
@@ -41,7 +41,7 @@
 				</div>
 				<hr>
 				<ul ng-repeat="course in courses | filter: semester.filter" id="course-list">
-					<li class=" course-row row">
+					<li class=" course-row row"  ng-show="isNumber(course.finalWeighted)">
 						<a class="course-name col-sm-6" href="#!/courses/{{course.id}}" ng-click="x(course.id)"><span class="real-course-name">{{course.name}}</span><br><i class="course-desc col-sm-12"><small><span class="real-course-desc">{{course.desc}}</span></small></i></a>
 						<div class="col-sm-3 course-grade"><strong>{{Math.round((course.finalWeighted))}}%</strong></div>
 						<div class="col-sm-3" id="delete-course-btns">
@@ -53,7 +53,20 @@
 
 						</div>
 					</li>
+					<li class=" course-row row" ng-show="!isNumber(course.finalWeighted)">
+						<a class="course-name col-sm-6" href="#!/courses/{{course.id}}" ng-click="x(course.id)"><span class="real-course-name">{{course.name}}</span><br><i class="course-desc col-sm-12"><small><span class="real-course-desc">{{course.desc}}</span></small></i></a>
+						<div class="col-sm-3 course-grade"><strong>None</strong></div>
+						<div class="col-sm-3" id="delete-course-btns">
+							<a class="btn btn-default" ng-click="goToCourseSettings(course.id)"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a>
+
+							<button class="btn btn-sm btn-danger delete-course-btn" ng-click="courseDelete(course.id)">
+								<span class="glyphicon glyphicon-trash"></span>
+							</button>
+
+						</div>
+					</li>
 				</ul>
+
 			</div >	
 			<div class="col-sm-3"></div>
 		</div>
