--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -1,15 +1,14 @@
 <div>
 	<div class="col-sm-12" id="single-course-header">
-		<h1>{{courseName}}</h1>
-<!-- 		<select ng-init="selectedGradeStyle = styles[0]" ng-model="selectedGradeStyle" ng-options="style for style in styles" ng-change="recalculate()">
-		</select> -->
+		<h1>{{course.name}}</h1>
+		<h4>{{course.semester}}</h4>
 	</div>
 	<br>
 	<div class="col-sm-7 col-lg-6">
 	<div id="single-course-view-container" >
 		<div class="row">
-			<h3 class="col-sm-11">Assignments</h3>
-			<div class="col-sm-1">
+			<h3 class="col-sm-10 col-lg-11">Assignments</h3>
+			<div class="col-sm-2 col-lg-1">
 				<button id="new-assignment" class="btn btn-default" ng-click="openNewAssignmentModal()">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				</button>
@@ -41,6 +40,10 @@
 	</div>
 	</div>
 
+	<div ng-show="noGrades" class="col-sm-5">
+		<img id="speech-bubble" src="img/mySpeechBubble.png">
+	</div>
+
 	<div id="giant-chart-container" class="col-sm-5 col-lg-6">
 		<div class="col-sm-3 col-lg-3"></div>
 		<div class="col-sm-6 col-lg-6" >
@@ -60,7 +63,8 @@
 			</span></div>
 		</div>
 		<div id="single-course-btns">
-			<h2 >Final Grade: {{finalGrade}} </h2>
+			<h2 ng-show="!noGrades">Final Grade: {{finalGrade}} </h2>
+			<h2 ng-show="noGrades">No Grades Yet!</h2>
 		</div>
 	</div>
 </div>
