--- a/partials/single_course_view.html
+++ b/partials/single_course_view.html
@@ -64,7 +64,8 @@
 		</div>
 		<div id="single-course-btns">
 			<h2 ng-show="!noGrades">Final Grade: {{finalGrade}} </h2>
-			<h2 ng-show="noGrades">No Grades Yet!</h2>
+			<h2 ng-show="noGrades">No Graded Assignments!</h2>
+			<h4 ng-show="noGrades">Add an Assignment with the button above to get started</h4>
 		</div>
 	</div>
 </div>
