--- a/partials/MODAL_newAssignment.html
+++ b/partials/MODAL_newAssignment.html
@@ -9,16 +9,22 @@
             <section class="form-group">
               <h4>Create your Assignment</h4>
               <div>
-                Assignment Name: <input class="form-control" type="text" autofocus="true"  ng-model="newAssignment.name" ng-focus="true">
+                Assignment Name: <input id="assignment-name" class="form-control" type="text" autofocus="true"  ng-model="newAssignment.name" ng-focus="true">
+                <div class="alert alert-warning" role="alert" ng-show="badInputName">
+                    <strong>Warning!</strong>You must enter a name!
+                </div>
                 Assignment Description: <input class="form-control" type="text" ng-model="newAssignment.desc">
                 Points Possible: <input class="form-control" ng-model="newAssignment.possiblePoints" type="number">
+                <div class="alert alert-warning" role="alert" ng-show="badInputPoints">
+                    <strong>Warning!</strong>You must enter points!
+                </div>
                 Points Received: <input class="form-control" ng-model="newAssignment.pointsEarned" placeholder="Optional..." type="number">
               </div> 
             </section>
           </div>
           <div class="modal-footer">
             <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <button class="btn btn-primary"  data-dismiss="modal" ng-click="createAssignment()">Create Assignment</button>
+            <button class="btn btn-primary"   ng-click="createAssignment()">Create Assignment</button>
           </div>
       </div>
     </div>
