--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -13,7 +13,7 @@
         <li id="navbar-profile-btn" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
 
           <li class="dropdown" ng-show="isLoggedIn" uib-dropdown>
-            <a class="btn dropdown-toggle" uib-dropdown-toggle>My Classes <b class="caret"></b></a>
+            <a class="btn dropdown-toggle" uib-dropdown-toggle> My Semster <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <div id="navbar-courses" ng-repeat="course in navCourses" >
                     <li><a ng-href="#!/courses/{{course.id}}">{{course.name}}</a></li>
