--- a/css/styles.css
+++ b/css/styles.css
@@ -387,3 +387,13 @@ a{
 .assignment-desc{
 	margin:0;
 }
+
+#no-courses-container h3{
+	margin: 0;
+	margin-top: 3.5%;
+}
+
+#new-user-arrow{
+	font-size: 2.25em;
+	margin-top: 3.25%;
+}
