--- a/partials/profile.html
+++ b/partials/profile.html
@@ -2,7 +2,7 @@
 	<div id="profile-header" class="row">
 		<h1><strong>{{account.name}}</strong></h1>
 		<div ng-if="hasProfilePicture">
-			<img id="user-profile-pic" src="{{profilePicturePath}}" alt="IMAGE">
+			<img id="user-profile-pic" src="img/profile_placeholder.png" alt="IMAGE">
 		</div>
 
 		<div id="profile-info-container">
