--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -10,7 +10,7 @@
 
     </div>
     <ul class="nav navbar-nav">
-        <li id="navbar-profile-btn" ng-show="isLoggedIn"><a ng-href="#!/{{user}}" ng-click="goToUserProfile()">Profile</a></li>
+        <li id="navbar-profile-btn" ng-show="isLoggedIn"><a ng-href="#!/{{user}}">Profile</a></li>
 
           <li class="dropdown" ng-show="isLoggedIn" uib-dropdown>
             <a class="btn dropdown-toggle" uib-dropdown-toggle> My Semster <b class="caret"></b></a>
